homework2/fpgasort/fpgasort.log
/home/cehaith2/csc591/homework2/fpgasort.cl:36:32: error: expression is not assignable
            temp[temp_index++] = data[left_lower++];
            ~~~~~~~~~~~~~~~~~~ ^
/home/cehaith2/csc591/homework2/fpgasort.cl:38:9: error: expected expression
        else if(data[right_lower] < data[left_lower]) {
        ^
/home/cehaith2/csc591/homework2/fpgasort.cl:47:5: error: expected identifier or '('
    for(index = get_global_id(0) * subarr_size; index <= right_upper; index++) {
    ^
/home/cehaith2/csc591/homework2/fpgasort.cl:52:1: error: expected external declaration
}
^
4 errors generated.
